--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -9,3 +9,27 @@
     padding-top: 8px;
     top: 15px;
 }
+
+.Logo-Discord {
+    width: 400px;
+    height: 200px;
+}
+
+.Logo-Youtube {
+    width: 400px;
+    height: 220px;
+}
+
+.Logo-Steam {
+    width: 200px;
+    height: 200px;
+}
+
+.Dispo-Logo-Link {
+    text-align: center;
+}
+
+.Icon-Subnautica {
+    width: 50px;
+    height: 50px;
+}
