--- a/CSS/Overlay.css
+++ b/CSS/Overlay.css
@@ -9,7 +9,7 @@ body {  /* Applique l'image : "Fond_All_Pages" en tant que background*/
 }
 
 nav {
-    width: 70%;
+    width: 75%;
     margin: 0 auto;
     background: linear-gradient(to right, darkcyan, darkblue);  /* Permet d'avoir un dégradée allant de la gauche vers la droites dans la bare de navigation */ 
     opacity: 70%;
@@ -24,7 +24,7 @@ nav ul {
 
 nav ul li {
     float: left;
-    width: 25%;
+    width: 20%;
     text-align: center;
     position: relative; /* Permet de réalignée les sous section avec leurs section */
 }
@@ -83,6 +83,8 @@ nav > ul li:hover .sous {   /* Permet de montrée les sous section du menu déro
     font-size: 12px;
 }
 
-
+#asup {
+    
+}
 
 
