--- a/CSS/Overlay.css
+++ b/CSS/Overlay.css
@@ -84,7 +84,14 @@ nav > ul li:hover .sous {   /* Permet de montrée les sous section du menu déro
 }
 
 #asup {
-    
+    display: none;
+    text-decoration: none;
+    color: none;
+    border-bottom: none;
+    padding: none;
 }
 
+#creators {
+    text-align: center;
+}
 
