--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -1,6 +1,42 @@
 .Main-Background {
     width: 75%;
-    height: 95%;
+    height: 6200px;
+    left: 12.5%;
+    position: absolute;
+    background-color: #1a1b1d;
+    opacity: 85%;
+    border-radius: 50px;
+    padding-top: 8px;
+    top: 15px;
+}
+
+.Main-Background-Herbivores {
+    width: 75%;
+    height: 7500px;
+    left: 12.5%;
+    position: absolute;
+    background-color: #1a1b1d;
+    opacity: 85%;
+    border-radius: 50px;
+    padding-top: 8px;
+    top: 15px;
+}
+
+.Main-Background-Scavengers {
+    width: 75%;
+    height: 3750px;
+    left: 12.5%;
+    position: absolute;
+    background-color: #1a1b1d;
+    opacity: 85%;
+    border-radius: 50px;
+    padding-top: 8px;
+    top: 15px;
+}
+
+.Main-Background-Mort {
+    width: 75%;
+    height: 2200px;
     left: 12.5%;
     position: absolute;
     background-color: #1a1b1d;
@@ -90,10 +126,9 @@
     font-style: italic;
 }
 
-.Dispo-Mobs {
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 100%;
+.Dispo-Mobs {   
+    flex-wrap: wrap;        /*Je ne sais pas pourquoi mon code pour effectuer le flex wrap ne marche pas j'ai donc contournée le problème en ajoutant un fond noire derrière*/
+    display: inline-block;
 }
 
 table{
@@ -111,5 +146,34 @@ table, td, tr{
 }
 
 .Images-Mobs {
-    width: 20%;
+    width: 30%;
+}
+
+.Texte-index {
+    text-align: center;
+    font-size: 50px;
+}
+
+.Texte-index-center {
+    text-align: center;
+}
+
+#Unknown-Studio {
+    width: 25%;
+}
+
+.Texte-Other {
+    text-align: center;
+    font-size: 55px;
+    color: rgb(32, 219, 194);
+    font-family: fantasy;
+    font-style: italic;
+}
+
+.Texte-Other-center {
+    text-align: center;
+}
+
+#Charlie {
+    width: 50%;
 }
